Changing how I hide the sidenav on smaller screens. There is a bug with the current way. If you make a screen smaller so that the page hides the side nav then everything works as expected. But if you load the page on a small screen then the sidenav will never appear, even if the menu button is clicked.

--- a/static/style.css
+++ b/static/style.css
@@ -125,7 +125,6 @@ h1, h2, strong {
 /*SIDE NAV*/
 /**********/
 
-
 .sidenav {
   height: 100%;
   width: 200px;
@@ -135,12 +134,6 @@ h1, h2, strong {
   left: 0;
   background-color: #111;
   padding-top: 60px;
-}
-
-@media only screen and (max-width: 1023px) {
-  .sidenav {
-    display: none;
-  }
 }
 
 .sidenav_button {
